Fix: Implement dark mode for options page.

--- a/addon/options/options.css
+++ b/addon/options/options.css
@@ -7,22 +7,21 @@
   --application-foreground-color: black;
 }
 
-/* @media screen and (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
-    --application-background-color: rgb(56, 56, 61);
-    --application-foreground-color: rgb(249, 249, 250);
-  }
-} */
-
-@media screen and (prefers-color-scheme: light) {
-  body {
-    background-color: var(--application-background-color);
-    color: var(--application-foreground-color);
+    --application-background-color: rgb(28, 27, 34);
+    --application-foreground-color: rgb(251, 251, 254);
+    --in-content-box-background: rgb(35, 34, 43);
+    --in-content-button-background: rgb(43, 42, 51);
+    --in-content-button-text-color: rgb(251, 251, 254);
+    --in-content-button-background-hover: rgb(82, 82, 94);
+    --in-content-button-background-active: rgb(91, 91, 102);
   }
 }
 
 body {
-  direction: __MSG_@@bidi_dir__;
+  background-color: var(--application-background-color);
+  color: var(--application-foreground-color);
 }
 
 #preferencesGrid {
@@ -58,4 +57,34 @@ button {
   font-size: 1em;
   margin: 0.5em auto;
   padding: 0.5em;
+}
+
+@media (prefers-color-scheme: dark) {
+  button {
+    background-color: var(--in-content-button-background);
+    border: solid 1px var(--in-content-button-background);
+    color: var(--in-content-button-text-color);
+  }
+
+  button:hover {
+    background-color: var(--in-content-button-background-hover);
+    border: solid 1px var(--in-content-button-background-hover);
+  }
+
+  button:hover:active {
+    background-color: var(--in-content-button-background-active);
+    border: solid 1px var(--in-content-button-background-active);
+  }
+}
+
+input[type="number"].hidespinbuttons {
+  appearance: textfield !important;
+}
+
+input[type="number"] {
+  background-color: var(--in-content-box-background);
+  color: inherit;
+  border: solid 1px grey;
+  padding: 5px;
+  width: 2em
 }
